# amarantin

./: .container.sh  .gitignore  .rootlogon.C  .setup.sh  AGENTS.md  AUTHORS  CMakeLists.txt  COMMANDS  DESIGN.md  Dockerfile  INPUT_PROVENANCE  INSTALL  INVARIANTS.md  LICENSE  Makefile  README  README.md  TARGET.md  USAGE  VISION.md  autogen.sh  config.in  configure.ac  datasets.mk  samples-dag.mk
.agent/: PLANS.md  current_execplan.md
.agent/analysis/: ccnumu_hyperon.md
.codex/: config.toml
ana/: CMakeLists.txt  Channels.hh  Cuts.cc  Cuts.hh  EventCategory.hh  EventListBuild.cc  EventListBuild.hh  EventListBuilder.hh  EventListSelection.cc  EventListSelection.hh  README  SampleDef.cc  SampleDef.hh  SignalDefinition.cc  SignalDefinition.hh  Snapshot.cc  Snapshot.hh  SnapshotService.cc  SnapshotService.hh  ccnumu_hyperon_measurement_contract.json
ana/include/: AnalysisChannels.hh  EventListBuilder.hh  EventListSelection.hh
ana/macro/: inspect_categories.C  inspect_cutflow.C  mk_snapshot.C
ana/src/: EventListBuilder.cc  EventListSelection.cc  SampleDef.cc
app/: CMakeLists.txt  Makefile  mk_channel.cc  mk_cov.cc  mk_dataset.cc  mk_dist.cc  mk_eventlist.cc  mk_fit.cc  mk_sample.cc  mk_sbnfit_cov.cc  mk_xsec_fit.cc
book/: CMakeLists.txt
book/include/: SampleBook.hh  SampleCard.hh
book/src/: SampleBook.cc
cards/: README  catalog.tsv  datasets.tsv
cmake/: amarantinConfig.cmake.in
docs/: INITIAL_BACKLOG.md  START_PROMPT.md  adaptive-binning-plan.md  minimality-log.md  minimality-log.template.md  repo-internals.puml
fit/: CMakeLists.txt  README  SignalStrengthFit.cc  SignalStrengthFit.hh  XsecFit.cc  XsecFit.hh
fit/macro/: fit_channel.C  scan_mu.C
framework/core/: main.cc
framework/io/app/: mk_sample.cc
framework/io/include/: ArtProvenanceIO.hh  EventListIO.hh  RootUtils.hh  SampleIO.hh
framework/io/macro/: make_sample.C  mk_sample.C  print_eventlist.C  process_sample.C
framework/io/source/: ArtProvenanceIO.cc  EventListIO.cc  RunDatabaseService.cc  SampleIO.cc
io/: CMakeLists.txt  ChannelIO.cc  ChannelIO.hh  DERIVED  DatasetIO.cc  DatasetIO.hh  DistributionIO.cc  DistributionIO.hh  EventListIO.cc  EventListIO.hh  InputPartitionIO.cc  InputPartitionIO.hh  Makefile  NTUPLE  README  SampleIO.cc  SampleIO.hh  ShardIO.cc  ShardIO.hh  VISION.md
io/bits/: DERIVED  NTUPLE  RunDatabaseService.cc  RunDatabaseService.hh
io/detail/: RootUtils.hh  RunDatabaseService.cc
io/include/: ArtProvenanceIO.hh  DatasetIO.hh  EventListIO.hh  EventListSelection.hh  InputPartitionIO.hh  RunInfoDatabase.hh  SampleIO.hh  SnapshotService.hh
io/macro/: MacroUtils.hh  inspect_weights.C  make_sample.C  mk_sample.C  mk_snapshot.C  print_dataset.C  print_eventlist.C  print_sample.C  process_sample.C  write_channel.C
io/source/: ArtProvenanceIO.cc  DatasetIO.cc  RunDatabaseService.cc
io/src/: DatasetIO.cc  EventListIO.cc  EventListSelection.cc  InputPartitionIO.cc  RunDatabaseService.cc  RunDatabaseService.hh  RunInfoDatabase.cc  SampleIO.cc  SnapshotService.cc
io/src/detail/: RunDatabaseService.cc
macro/: plot_topological_score.C
plot/: CMakeLists.txt  EfficiencyPlot.cc  EfficiencyPlot.hh  EventDisplay.cc  EventDisplay.hh  EventListPlotting.cc  EventListPlotting.hh  PlotChannels.hh  PlotDescriptors.hh  PlotEventCategories.hh  Plotter.cc  Plotter.hh  PlottingHelper.cc  PlottingHelper.hh  README  StackedHist.cc  StackedHist.hh  UnstackedHist.cc  UnstackedHist.hh
plot/bits/: DataMcHistogramUtils.hh
plot/include/: EventDisplay.hh  EventListPlotting.hh  Systematics.hh
plot/macro/: cache_systematics.C  inspect_covariance.C  inspect_dist.C  inspect_systematics.C  plot_channel.C  plot_efficiency.C  plot_event_display.C
plot/src/: EventDisplay.cc  EventListPlotting.cc  Systematics.cc
samplelists/numi_fhc_run1/: beam-s0.list
samples/: README  catalog.tsv
snapshot/: CMakeLists.txt
snapshot/src/: SnapshotService.cc
syst/: CMakeLists.txt  CacheKey.cc  Detector.cc  DetectorSystematics.cc  README  Rebin.cc  ReweightCovariance.cc  ReweightFill.cc  Support.cc  Systematics.cc  Systematics.hh  SystematicsDetector.cc  SystematicsSupport.cc  SystematicsUniverseFill.cc  SystematicsUniverseSummary.cc  UniverseFill.cc  UniverseSummary.cc  VISION.md
syst/bits/: Detail.hh  SystematicsInternal.hh
syst/include/: Systematics.hh  SystematicsCacheBuilder.hh
syst/src/: Systematics.cc  SystematicsCacheBuilder.cc
tests/: CMakeLists.txt  fit_histfactory_smoke.cc  fit_rigorous_check.cc  io_rigorous_check.cc  pipeline_normalization_check.cc  plot_rigorous_check.cc  signal_definition_contract_check.cc  systematics_rigorous_check.cc  testroot_pipeline_check.cc
tools/: Dockerfile.plantuml-pdf  configure-build  macro-analysis-smoke.sh  mklist.sh  overnight-minimality-pass.sh  render-repo-internals-pdf.sh  render-sample-catalog.sh  run-macro  systematics-detector-smoke.sh  systematics-reweight-smoke.sh  systematics-sbnfit-export-smoke.sh  test-root-smoke.sh
