set(AMARANTIN_ANA_SOURCES
  EventListBuild.cc
  Snapshot.cc
  SampleDef.cc
  Cuts.cc
)

set(AMARANTIN_ANA_PUBLIC_HEADERS
  EventListBuild.hh
  SampleDef.hh
  Snapshot.hh
)

add_library(Ana SHARED
  ${AMARANTIN_ANA_SOURCES}
  ${AMARANTIN_ANA_PUBLIC_HEADERS}
)

target_compile_features(Ana PUBLIC cxx_std_17)

target_include_directories(Ana
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/amarantin>
)

target_link_libraries(Ana
  PUBLIC
    IO
    amarantin_root_deps
  PRIVATE
    amarantin_build_options
)

set_target_properties(Ana PROPERTIES
  OUTPUT_NAME Ana
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS Ana
  EXPORT amarantinTargets
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)

install(FILES ${AMARANTIN_ANA_PUBLIC_HEADERS}
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)
