set(AMARANTIN_FIT_SOURCES
  SignalStrengthFit.cc
)

set(AMARANTIN_FIT_PUBLIC_HEADERS
  SignalStrengthFit.hh
  XsecFit.hh
)

add_library(Fit SHARED
  ${AMARANTIN_FIT_SOURCES}
  ${AMARANTIN_FIT_PUBLIC_HEADERS}
)

target_compile_features(Fit PUBLIC cxx_std_17)

target_include_directories(Fit
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/amarantin>
)

target_link_libraries(Fit
  PUBLIC
    IO
  PRIVATE
    amarantin_build_options
)

set_target_properties(Fit PROPERTIES
  OUTPUT_NAME Fit
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS Fit
  EXPORT amarantinTargets
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)

install(FILES ${AMARANTIN_FIT_PUBLIC_HEADERS}
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)
