set(AMARANTIN_SNAPSHOT_SOURCES
  src/SnapshotService.cc
)

set(AMARANTIN_SNAPSHOT_PUBLIC_HEADERS
  include/SnapshotService.hh
)

add_library(Snapshot SHARED
  ${AMARANTIN_SNAPSHOT_SOURCES}
  ${AMARANTIN_SNAPSHOT_PUBLIC_HEADERS}
)

target_compile_features(Snapshot PUBLIC cxx_std_17)

target_include_directories(Snapshot
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/amarantin>
)

target_link_libraries(Snapshot
  PUBLIC
    IO
    amarantin_root_deps
  PRIVATE
    amarantin_build_options
)

set_target_properties(Snapshot PROPERTIES
  OUTPUT_NAME Snapshot
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS Snapshot
  EXPORT amarantinTargets
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)

install(FILES ${AMARANTIN_SNAPSHOT_PUBLIC_HEADERS}
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)
