set(AMARANTIN_SYST_SOURCES
  Systematics.cc
  DetectorSystematics.cc
  ReweightFill.cc
  ReweightCovariance.cc
)

set(AMARANTIN_SYST_PUBLIC_HEADERS
  Systematics.hh
)

set(AMARANTIN_SYST_INTERNAL_HEADERS
  bits/Detail.hh
)

add_library(Syst SHARED
  ${AMARANTIN_SYST_SOURCES}
  ${AMARANTIN_SYST_PUBLIC_HEADERS}
  ${AMARANTIN_SYST_INTERNAL_HEADERS}
)

find_package(Eigen3 REQUIRED)

target_compile_features(Syst PUBLIC cxx_std_17)

target_include_directories(Syst
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/amarantin>
)

target_link_libraries(Syst
  PUBLIC
    IO
    amarantin_root_deps
  PRIVATE
    Ana
    Eigen3::Eigen
    amarantin_build_options
)

set_target_properties(Syst PROPERTIES
  OUTPUT_NAME Syst
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS Syst
  EXPORT amarantinTargets
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)

install(FILES ${AMARANTIN_SYST_PUBLIC_HEADERS}
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/amarantin"
)
